[feat] switch syntax add calc.html

--- a/index.html
+++ b/index.html
@@ -87,8 +87,11 @@
        // 로그인 => 실패시 => 팝업노출('로그인 실패');
        // 취소 => confirm => 진짜로 취소하겠습니까? => yes reload, no 팝업만 close
        // 회원가입 => loginInfo 저장소에 아이디와 패스워드를 저장하시오. array.push
-       // 회원탈퇴 기능 추가, 회원 탈퇴 추가 하기
-       // 회원목록 출력하시오
+       // 회원탈퇴 기능 추가, 회원 탈퇴 추가 하기.
+       // 회원목록 출력하시오.
+       // 브라우저 꺼도 남아있게 처리 하기, cookie, localStorage
+       // 페이징 처리 (1,2,3... , 더보기... )
+
 
 
        // 90점이상 A
